fix shifting cell height

--- a/styles/style.css
+++ b/styles/style.css
@@ -98,8 +98,8 @@ body {
 }
 
 .cell {
-   flex-grow: 1;
-   width: 33%;
+   flex: 1 0 30%;
+   height: 33.3%;
    border: 1px solid black;
    cursor: pointer;
    font-size: 100px;
